# biosync

./: .gitignore  CMakeLists.txt  README.md
installer/windows/: BioSync.iss
src/: MainWindow.cpp  MainWindow.h  main.cpp  resources_win.rc
src/assets/: resources.qrc
src/db/: Database.cpp  Database.h
src/model/: AttendanceRecord.h  BiometricTemplate.h  Device.h
src/server/: ZkAdmsServer.cpp  ZkAdmsServer.h
src/service/: ApiPusher.cpp  ApiPusher.h  DeviceDiscovery.cpp  DeviceDiscovery.h
src/ui/: AddDeviceDialog.cpp  AddDeviceDialog.h  AttendancePage.cpp  AttendancePage.h  BiometricBackupDialog.cpp  BiometricBackupDialog.h  DeviceDiscoveryDialog.cpp  DeviceDiscoveryDialog.h  DevicesPage.cpp  DevicesPage.h  LogsPage.cpp  LogsPage.h  SettingsPage.cpp  SettingsPage.h
